# backend

./: .gitignore  BACKEND_ARCHITECTURE_EXPLAINED.md  README.md  pyproject.toml  requirements.txt
api/: __init__.py  auth.py  cameras.py  db.py  extensions.py  health.py  jobs.py  model.py  schema.sql  tracking.py  tracking_endpoints.py  vehicle_tracking.py  video_endpoints.py  video_management.py
api/jobs/: __init__.py  models.py  queue.py  worker.py
api/ml/: __init__.py  inference.py  loader.py  reid.py  routes.py
api/routes/: __init__.py  cameras.py  detections.py  health.py  jobs.py  reports.py  uploads.py  videos.py
api/tracking/: __init__.py  correlate.py  routes.py  store.py
